Materialize CSS added

--- a/webapp/html-dev/main.html
+++ b/webapp/html-dev/main.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>Train Delays</title>
-    <style>
-        body {font-family: Arial, Helvetica, sans-serif}
-    </style>
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
 </head>
 <body>
-<div>
+<div class="container">
     <h4>HSL to WAT</h4>
-    <table border="1" cellpadding="2">
+    <table class="striped">
+        <tbody>
         <tr>
             <td>[1] Mon 23</td>
             <td>07:13</td>
@@ -60,11 +60,14 @@
             <td></td>
             <td>CANCELLED</td>
         </tr>
+        </tbody>
     </table>
+
 </div>
-<div>
+<div class="container">
     <h4>HSL to WAT</h4>
-    <table border="1" cellpadding="2">
+    <table class="striped">
+        <tbody>
         <tr>
             <td>[1] Mon 23</td>
             <td>07:13</td>
@@ -114,7 +117,9 @@
             <td></td>
             <td>CANCELLED</td>
         </tr>
+        </tbody>
     </table>
 </div>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
