--- a/webapp/html-dev/main.html
+++ b/webapp/html-dev/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Train Delays</title>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
 
 </head>
 <body>
@@ -120,6 +120,6 @@
         </tbody>
     </table>
 </div>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="static/js/materialize.min.js"></script>
 </body>
 </html>
